fixes in clocks
