# Modules/Clocks/routes/api.php
@@ -34,9 +34,9 @@ Route::group(['middleware' => ['auth:api', 'role:Hr']], function () {
 
     Route::post('/update_clock_issue/{clock}', [ClockController::class, 'updateClockIssues']);
 
-    Route::get('/no_clock_in', [ClockController::class, 'getUsersClockInStatus']);
+    Route::get('/users_clocks_Ins', [ClockController::class, 'getUsersClockInStatus']);
 
-    Route::get('/no_clock_out', [ClockController::class, 'getUsersClockOutStatus']);
+    Route::get('/users_clocks_Outs', [ClockController::class, 'getUsersClockOutStatus']);
     
 
 
